fix card align

--- a/src/blocks/popup/__card/popup__card.css
+++ b/src/blocks/popup/__card/popup__card.css
@@ -1,3 +1,3 @@
 .popup__card {
-  grid-area: card;
+  align-self: baseline;
 }
